--- a/index.html
+++ b/index.html
@@ -2,11 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="style.css">
+    <title>CV</title>
 </head>
 <body>
+    <header class="header"  id="home">
+        <div class="container">
+          <nav class="header_menu">
+            <ul class="menu_list">
+              <li class="menu_item">
+                <a href="#home" class="menu_link">Home</a>
+              </li>
+              <li class="menu_item">
+                <p><a href="#aboutme" class="menu_link">About&nbsp;me</a></p>
+              </li>
+              <li class="menu_item">
+                <a href="#skills" class="menu_link">Skills</a>
+              </li>
+              <li class="menu_item">
+                <a href="#code_example" class="menu_link">Code example</a>
+              </li>
+              <li class="menu_item">
+                <a href="#education" class="menu_link">Education</a>
+              </li>
+              <li class="menu_item">
+                <a href="#english" class="menu_link">English</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <main>
+        <section class="person_info container" >
+          <div class="name">
+            <h1 class="person_name">Maxim Rybakov</h1>
+            <p class="person_study">Student in RS School</p>
+            </div>
+            <div>
+                <img class="photo" src="./images/IMG_0101.jpg" alt="image" />
+              </div>
+        </section>
+        <section class="about_me container_background" id="aboutme">
+            <h2 class="heading_about_me id="aboutme">About me</h2>
+            <div class="all_history">
+                <p class="story">I&nbsp;am a&nbsp;former professional football player! I&nbsp;want to&nbsp;become a&nbsp;front-end developer!<br> I&nbsp;am purposeful, sociable, learn fast, handle stressful situations well!</p>
+           </div>
+        </section>
+
+
     
 </body>
 </html>
