fix: fix footer

--- a/index.html
+++ b/index.html
@@ -47,32 +47,32 @@
               </div>
         </section>
         <section class="about_me container_background" id="aboutme">
-            <h2 class="heading_about_me id="aboutme">About me</h2>
+            <h2 class="heading_about_me">About me</h2>
             <div class="all_history">
                 <p class="story">I&nbsp;am a&nbsp;former professional football player! I&nbsp;want to&nbsp;become a&nbsp;front-end developer!<br> I&nbsp;am purposeful, sociable, learn fast, handle stressful situations well!</p>
            </div>
         </section>
         <section class="skills_info container" id="skills">
             <h2 class="heading">Skills</h2>
-            <div class="icon_ability">
-                <div class="html_ability">
+            <ul class="icon_ability">
+                <li class="html_ability">
                     <p><img src="./images/html5.png" alt="html5" class="icon"></p>
                     <p class="name_icon">HTML5</p>
-                </div>
-                <div class="css_ability">
+                </li>
+                <li class="css_ability">
                     <p><img src="./images/css3.png" alt="css3" class="icon"></p>
                     <p class="name_icon">CSS3</p>
-                </div>
-            </div>
+                </li>
+            </ul>
         </section>
         <section class="code_example container_background" id="code_example">
             <h2 class="heading">Code example</h2>
             <div class="example">
-                <code><pre>
+              <pre>
                     function multiply(a, b) {
                         return a * b
                        }
-                </pre></code>
+              </pre>
             </div>
         </section>
         <section class="education_info container" id="education">
@@ -98,19 +98,18 @@
             <ul class="social_icon">
                 <li><a href="https://www.instagram.com/rybamax23/" target="_blank"><img src="./images/instagram-2.png" alt="" class="icon_footer"></a></li>
                 <li><a href="https://vk.com/rybamax23" target="_blank"><img src="./images/vk.png" alt="" class="icon_footer"></a></li>
-                <li><a href="https://t.me/rybamax23" target="_blank"><img src="./images/telegram.png" alt=""class="icon_footer"></a></li>
-                <li><a href="https://github.com/rybakovmax23" target="_blank"><img src="./images/github.png" alt=""class="icon_footer"></a></li>
+                <li><a href="https://t.me/rybamax23" target="_blank"><img src="./images/telegram.png" alt="" class="icon_footer"></a></li>
+                <li><a href="https://github.com/rybakovmax23" target="_blank"><img src="./images/github.png" alt="" class="icon_footer"></a></li>
               </ul>
         </div>  
-        <div class="rs">
-            <a href="https://docs.rs.school/#/" target="_blank">
+        <div class="rs_school">
+          <div class="rs">
+            <a href="https://rs.school/js/" target="_blank">
                 <img src="https://rs.school/images/rs_school_js.svg" alt="rs school docs">
             </a>
         </div>  
         <div class="year">2021</div>
-
-
-
-    
+        </div>
+    </footer>
 </body>
 </html>
